Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-1040

Missing writer method implementations

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • cpp-1.2.0
    • parquet-cpp
    • None

    Description

      In file/writer.h, these methods exist:

      For RowGroupWriter:
      num_rows
      num_columns

      For ParquetFileWriter:
      num_rows
      num_row_groups
      num_columns

      When using these methods, I get link errors:

      LNK2028 unresolved token (0A001B98) "public: int __cdecl parquet::ParquetFileWriter::num_row_groups(void)const " (?num_row_groups@ParquetFileWriter@parquet@@$$FQEBAHXZ) referenced in ...

      Looking in the source, it's because these methods are not implemented in writer.cc. This should be a trivial fix.

      Attachments

        Activity

          People

            uwe Uwe Korn
            tobyshaw Toby Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: