PARQUET-1040: Add missing writer methods

Author: Korn, Uwe <Uwe.Korn@blue-yonder.com>

Closes #365 from xhochy/PARQUET-1040 and squashes the following commits:

ef359ef [Korn, Uwe] PARQUET-1040: Add missing writer methods

Change-Id: I0d7a5b227b64e85c42106e37bb902cc3bbb15e85